[FIX] fix style modal z-index

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -7,3 +7,7 @@
 .vgt-global-search {
   padding: 1rem .5rem !important;
 }
+
+.vm--container {
+  z-index: 40 !important;
+}
